--- a/requirements.txt
+++ b/requirements.txt
@@ -1,100 +1,25 @@
-annotated-types==0.7.0
-anyio==4.7.0
-asttokens==3.0.0
-blessed==1.20.0
-certifi==2024.12.14
-charset-normalizer==3.4.1
-click==8.1.8
-cloudpickle==3.1.0
-colorlog==6.9.0
-contourpy==1.3.0
-cycler==0.12.1
-decorator==5.1.1
-distro==1.9.0
-docker-pycreds==0.4.0
-einops==0.8.0
-eval_type_backport==0.2.2
-exceptiongroup==1.2.2
-executing==2.1.0
-Farama-Notifications==0.0.4
-filelock==3.16.1
-fonttools==4.55.3
-fsspec==2024.12.0
-gitdb==4.0.11
-GitPython==3.1.43
-gpustat==1.1.1
-grad-cam==1.5.4
-gym==0.26.2
-gym-notices==0.0.8
-gymnasium==1.0.0
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.1
-huggingface-hub==0.29.1
-idna==3.10
-imageio==2.36.1
-importlib_metadata==8.5.0
-importlib_resources==6.4.5
-ipython==8.18.1
-jedi==0.19.2
-Jinja2==3.1.5
-jiter==0.8.2
-joblib==1.4.2
-kiwisolver==1.4.7
-lark==1.2.2
-lazy_loader==0.4
-MarkupSafe==3.0.2
-matplotlib==3.9.4
-matplotlib-inline==0.1.7
-mpmath==1.3.0
-networkx==3.2.1
-numpy==1.26.4
-nvidia-ml-py==12.560.30
-openai==1.58.1
+colorlog
+einops
+grad-cam
+gym
+gymnasium
+lark
+matplotlib
+matplotlib-inline
+networkx
+numpy
+openai
 opencv-python==4.8.0.74
-packaging==24.2
-pandas==2.2.3
-parso==0.8.4
-pexpect==4.9.0
-pillow==11.0.0
-platformdirs==4.3.6
-prompt_toolkit==3.0.48
-protobuf==5.29.2
-psutil==6.1.1
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pydantic==2.10.4
-pydantic_core==2.27.2
-Pygments==2.18.0
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
-pytz==2024.2
-PyYAML==6.0.2
-requests==2.32.3
-rtpt==0.0.4
-safetensors==0.5.3
-scikit-image==0.24.0
-scikit-learn==1.6.0
-scipy==1.13.1
-sentry-sdk==2.19.2
-setproctitle==1.3.4
-six==1.17.0
-smmap==5.0.1
-sniffio==1.3.1
-stable_baselines3==2.4.0
-stack-data==0.6.3
-sympy==1.13.3
-threadpoolctl==3.5.0
-tifffile==2024.8.30
-timm==1.0.15
-torch==2.2.2
-torchvision==0.17.2
-tqdm==4.67.1
-traitlets==5.14.3
-ttach==0.0.3
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.3.0
-wandb==0.19.1
-wcwidth==0.2.13
-zipp==3.21.0
+packaging
+pandas
+pillow
+rtpt
+safetensors
+scikit-image
+scikit-learn
+scipy
+six
+stable_baselines3
+timm
+tqdm
+wandb
