--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,21 @@
-anyio==4.5.2
-colorlog
-einops
-grad-cam
-gym
-gymnasium
-lark
-matplotlib
-matplotlib-inline
-networkx
-numpy
-openai
 opencv-python==4.8.0.74
-packaging
-pandas
-pillow
-rtpt
-safetensors
-scikit-image
-scikit-learn
-scipy
-six
-stable_baselines3
-timm
+colorlog
+numpy
+Pillow
+ipython
+imageio
 tqdm
+scipy
+lark
+openai
+matplotlib
+scikit-image
 wandb
+rtpt
+scikit-learn
+grad-cam
+einops
+stable_baselines3
+gym
+numpy
+timm
